# Atlas

./: .gitignore  README.md  pi.md  pyproject.toml  test.py
docs/: README.md
examples/: basic_assistant.py  conversational_assistant.py
src/: agents.py  prompt.py  tool.py  yaaf.py
src/ReAct/: agents.py  llm.py  prompt.py  str.py  test.py
src/persona_bots/: conversational_assistants.py
tests/: main.py
